<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2" >

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="275dp"
            android:layout_column="1"
            android:layout_row="1"
            android:hint="@string/Title" />

        <EditText
            android:id="@+id/editTextAuthor"
            android:layout_width="276dp"
            android:layout_column="1"
            android:layout_row="3"
            android:hint="@string/Author" />

        <EditText
            android:id="@+id/editTextPublisher"
            android:layout_width="274dp"
            android:layout_column="1"
            android:layout_row="5"
            android:hint="@string/publisher" />

        <EditText
            android:id="@+id/editTextISBN"
            android:layout_width="278dp"
            android:layout_column="1"
            android:layout_row="7"
            android:hint="@string/ISBN" />

        <EditText
            android:id="@+id/editTextReleaseDate"
            android:layout_width="275dp"
            android:layout_column="1"
            android:layout_row="9"
            android:hint="@string/release_date" />

        <EditText
            android:id="@+id/editTextNumberOfPages"
            android:layout_width="278dp"
            android:layout_column="1"
            android:layout_row="11"
            android:hint="@string/number_of_pages" />

        <Button
            android:id="@+id/button_submitFields"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="13"
            android:text="Submit"
            android:onClick="onSubmitManualEntry" />

        <Button
            android:id="@+id/button_clear"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="15"
            android:text="Clear" />

        <Space
            android:layout_width="1dp"
            android:layout_height="21dp"
            android:layout_column="0"
            android:layout_row="0" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="8" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="10" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="12" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="14" />

        <Space
            android:layout_width="1dp"
            android:layout_height="92dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="15" />

        <Space
            android:layout_width="21dp"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_row="0" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2" />
    </GridLayout>

</LinearLayout>